--- a/gb/24/11/14/n14371515.md
+++ b/gb/24/11/14/n14371515.md
@@ -18,40 +18,39 @@
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370974.md#1">新州议会大楼外发生枪击事件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370952.md#1">国民银行降低新客户房贷可变利率</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370871.md#1">驻雪梨台北经文处吴正伟处长代表政府捐助新州北部无尾熊复育中心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370861.md#1">澳航维珍恢复巴厘岛往返航班</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370817.md#1">用多卡宝发送大量诈骗短信 悉尼南区一男子被捕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370732.md#1">10月就业人数增近1.6万 失业率稳定在4.1%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370779.md#1">Temu出售盗版画作被原创作者发现</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370706.md#1">政府推数字谨慎责任新规 防范社媒伤害用户</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370696.md#1">圣诞临近 澳洲邮政恢复周末包裹配送业务 ?</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank">【征文】文宇：科举千年兴衰录（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367455.md#1">【未解之谜】石油的真相 取之不竭的能源？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366679.md#1">美国梦的传承 港妈延续父辈善举回馈社区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368907.md#1">【未解之谜】巧合还是命中注定？改变历史的大风</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358064.md#1">效职冥府的清朝进士吐露什么天机？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364035.md#1">商人突然怦然心动 枯骨果然是稀世珍宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370727.md#1">【新闻欣视角】马斯克要砍四分之三联邦机构？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367369.md#1">【思想领袖】中伊组成联盟 妄图接管拉丁美洲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361818.md#1">【全球新闻】川普重返白宫 与拜登相见欢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369592.md#1">珠海越野车冲撞事件酿35死43伤 嫌犯自残</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368891.md#1">男子驾车乱撞 珠海体育中心至少数十人倒地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369195.md#1">Costco被要求召回8万磅黄油 原因令人意外</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369579.md#1">《拥抱太阳的月亮》宋再临离世 享年39岁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14369016.md#1">孙俪再携一对儿女挺邓超 曝光另类育儿经</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369372.md#1">曾任反诈骗大使 林逸欣今卷诈骗案 无奈发文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369964.md#1">频道停更3年 大陆网红李子柒恢复更新登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370673.md#1">赵薇遭封杀逾三年 IG晒手转陀螺照引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369450.md#1">家中这项物品比马桶座脏15倍 你可能不知道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14370984.md#1">洗衣粉和洗衣精有何不同？ 哪个比较好？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370289.md#1">专家：吃这些“疗愈食物”会让你心情更差</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366957.md#1">加一勺起死回生？肉桂绝妙用法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368387.md#1">切洋葱泪流满面？破解之道一次看</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544926.md#1">【纪元焦点】南航机长用生命反抗职场霸凌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543479.md#1">砸钱也没用 中共这些技术被“卡脖子”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543820.md#1">广东制造业陷寒冬 老牌厂知名外企宣告结业</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543930.md#1">人民日报刊文纪念李克强冥诞 求是网删文</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543281.md#1">刘晓庆珠宝公司因民间借贷纠纷被执行44.9万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544299.md#1">饰《鱿鱼游戏3》反角 任时完粉丝数暴涨百万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543287.md#1">综艺《出去一下》将开播 舒华、桂纶镁同台亮相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539807.md#1">简单穴位按摩与食疗 保您不再做“起夜家”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543550.md#1">美国独立日烟火秀 纽约五大区最佳观赏地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539895.md#1">强化免疫有三关 中医从脏腑打造防御屏障</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/14/n14371515.htm">鼓励戒烟 澳洲将要求每支香烟印上健康警示语</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371515.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
